--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://zarutskaalina.github.io/project-test-page",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /project-test-page/"
+    "build": "parcel build src/*.html/"
   },
   "repository": {
     "type": "git",
